--- a/www/articles.html
+++ b/www/articles.html
@@ -65,6 +65,8 @@
                 </ul>
             </div>
 
+            <div id="loading_gif"></div>
+
             <section class="container">
                 <div class="row">
                     <section id="add_article">
