--- a/www/articles.html
+++ b/www/articles.html
@@ -88,6 +88,7 @@
                                 <a id="cameraGetPicture" class="btn">Select image file</a>
                                 <a id="videoCapture" class="btn">Select video file</a>
                             </div>
+                            <img id="img_preview"><br>
                             <input type="submit" class="btn" id="submit" value="Submit">
                         </form>
                     </section>
