--- a/platforms/browser/www/articles.html
+++ b/platforms/browser/www/articles.html
@@ -59,8 +59,8 @@
                     <i class="large material-icons">toc</i>
                 </a>
                 <ul>
-                    <li><a href="" class="btn-floating red"><i class="material-icons">delete</i></a></li>
-                    <li><a href="" class="btn-floating yellow darken-1"><i class="material-icons">mode_edit</i></a></li>
+                    <!-- <li><a href="" class="btn-floating red"><i class="material-icons">delete</i></a></li>
+                    <li><a href="" class="btn-floating yellow darken-1"><i class="material-icons">mode_edit</i></a></li> -->
                     <li><a href="" class="btn-floating green"><i class="material-icons btn_add">note_add</i></a></li>
                 </ul>
             </div>
@@ -87,6 +87,7 @@
                             <div class="file-field input-field col s12">
                                 <a id="cameraGetPicture" class="btn">Select image file</a>
                                 <a id="videoCapture" class="btn">Select video file</a>
+                                <a id="getPosition" class="btn">Add the geolocation</a>
                             </div>
                             <img id="img_preview"><br>
                             <input type="submit" class="btn" id="submit" value="Submit">
