--- a/platforms/browser/www/articles.html
+++ b/platforms/browser/www/articles.html
@@ -48,7 +48,7 @@
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
                         <li><a href="articles.html">Timeline</a></li>
-                        <li><a href="articles.html" id="btn_add_mobile" class="btn_add">Add article</a></li>
+                        <li><a href="articles.html" class="btn_add">Add article</a></li>
                     </ul>
                 </div>
             </nav>
