--- a/www/index.html
+++ b/www/index.html
@@ -101,7 +101,12 @@
                         </div>
                         <div id="articles_container">
                             <div class="row">
+                                <div id="left" class="col s12 m6">
 
+                                </div>
+                                <div id="right" class="col s12 m6">
+
+                                </div>
                             </div>
                         </div>
                     </section>
