unclickable button after pressing it in the form (image added, geolocation added, etc...)

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -69,17 +69,18 @@
 
             <section class="container">
                 <div class="row">
+
                     <section id="add_article">
                         <h2>Add an article :</h2>
                         <form class="col s12">
                             <div class="row">
-                                <div class="input-field center col s12">
+                                <div class="input-field center col s12 m8 push-m2">
                                     <input id="title" type="text" class="validate">
                                     <label for="title">Title :</label>
                                 </div>
                             </div> 
                             <div class="row">
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m8 push-m2">
                                     <textarea id="content" class="materialize-textarea"></textarea>
                                     <label for="content">Content :</label>
                                 </div>
