--- a/www/index.html
+++ b/www/index.html
@@ -69,24 +69,25 @@
 
             <section class="container">
                 <div class="row">
+
                     <section id="add_article">
                         <h2>Add an article :</h2>
                         <form class="col s12">
                             <div class="row">
-                                <div class="input-field center col s12">
+                                <div class="input-field center col s12 m8 push-m2">
                                     <input id="title" type="text" class="validate">
                                     <label for="title">Title :</label>
                                 </div>
                             </div> 
                             <div class="row">
-                                <div class="input-field col s12">
+                                <div class="input-field col s12 m8 push-m2">
                                     <textarea id="content" class="materialize-textarea"></textarea>
                                     <label for="content">Content :</label>
                                 </div>
                             </div>
                             <div class="file-field input-field col s12">
                                 <a id="cameraGetPicture" class="btn"><i class="material-icons">aspect_ratio</i><p>Select image file</p></a>
-                                <a id="videoCapture" class="btn"><i class="material-icons">movie</i><p>Select video file</p></a>
+                                <a id="videoCapture" class="btn"><i class="material-icons">movie</i><p>Capture video</p></a>
                                 <a id="getPosition" class="btn"><i class="material-icons">location_on</i><p>Add the geolocation</p></a>
                             </div>
                             <img id="img_preview"><br>
