add possibility to see the image of an article in full size

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <div class="file-field input-field col s12">
                                 <a id="cameraGetPicture" class="btn"><i class="material-icons">aspect_ratio</i><p>Select image file</p></a>
-                                <a id="videoCapture" class="btn"><i class="material-icons">movie</i><p>Select video file</p></a>
+                                <a id="videoCapture" class="btn"><i class="material-icons">movie</i><p>Capture video</p></a>
                                 <a id="getPosition" class="btn"><i class="material-icons">location_on</i><p>Add the geolocation</p></a>
                             </div>
                             <img id="img_preview"><br>
